# ManySecured-D3DB

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  behaviour.csv  behaviour_eth.csv  behaviour_ip4.csv  behaviour_tcp.csv  behaviour_udp.csv  firmware.csv  package-lock.json  schemas  tables.sql  type.csv
D3DB/: behaviour.csv  behaviour_eth.csv  (+5 more)
d3-scripts/: .gitignore  README.md  pyproject.toml
d3-scripts/src/: d3_build.py  d3_constants.py  d3_populate.py  d3_utils.py  guid_tools.py  json_tools.py  validate_schemas.py  yaml_tools.py
d3-scripts/src/d3_scripts/: build_type_map.py  check_behaviours_resolve.py  check_parents_resolve.py  check_uri_resolve.py  claim_graph.py  d3_build.py  d3_build_db.py  d3_build_vulnerabilities.py  d3_constants.py  d3_lint.py  d3_populate.py  d3_utils.py  export_tools.py  get_claim_tree.py  guid.py  guid_tools.py  json_tools.py  resolve_behaviour_rules.py  validate_schemas.py  yaml_tools.py
d3-scripts/src/d3_scripts/schemas/: README.md  behaviour.json  d3-claim.json  firmware.json  instance.json  type.json  vuln.json  vulnerability.json
d3-scripts/tests/: test_d3_build.py  test_d3_lint.py
d3-scripts/tests/__fixtures__/: .gitignore
d3-scripts/tests/__fixtures__/circular-dependence/: test-2.behaviour.d3.yaml  test.behaviour.d3.yaml
d3-scripts/tests/__fixtures__/circular-type-dependence/: test-2.type.d3.yaml  test.type.d3.yaml
d3-scripts/tests/__fixtures__/d3-build/: .gitignore  behaviour-1.behaviour.d3.yaml  behaviour-2.behaviour.d3.yaml  behaviour-3.behaviour.d3.yaml  behaviour-4.behaviour.d3.yaml  device-2.type.d3.yaml  device-3.type.d3.yaml  device-4.type.d3.yaml  device-5.type.d3.yaml  device-6.type.d3.yaml  test-2.firmware.d3.yaml  test.firmware.d3.yaml
d3-scripts/tests/__fixtures__/duplicate-property-type-inheritance/: test-2.type.d3.yaml  test-3.type.d3.yaml
d3-scripts/tests/__fixtures__/duplicate-property-type-inheritance-single-parent/: test-2.type.d3.yaml  test.type.d3.yaml
d3-scripts/tests/__fixtures__/duplicate-rules/: test-2.behaviour.d3.yaml
d3-scripts/tests/__fixtures__/duplicate-uuid/: device-2.type.d3.yaml
d3-scripts/tests/__fixtures__/firmware-missing-type/: test.firmware.d3.yaml
d3-scripts/tests/__fixtures__/invalid-uri/: invalid-uri.type.d3.yaml  valid-uri.type.d3.yaml
d3-scripts/tests/__fixtures__/missing-property-type-inheritance/: test-2.type.d3.json  test-2.type.d3.yaml  test.type.d3.yaml
d3-scripts/tests/__fixtures__/non-existent-parent-type/: test.type.d3.yaml
d3-scripts/tests/__fixtures__/non-existent-parents/: test.behaviour.d3.yaml
d3-scripts/tests/__fixtures__/non-existent-rules/: test-2.behaviour.d3.yaml  test.behaviour.d3.yaml
(+36548 files in other folders)
