[tool.poetry]
name = "d3-scripts"
version = "0.1.0"
description = "Utility scripts for ManySecured-D3 claims"
authors = [
    "NquiringMinds <contact@nquiringminds.com>",
    "Alois Klink <alois@nquiringminds.com>",
    "Craig Rafter <craig@nquiringminds.com>"
]
readme = "README.md"
homepage = "https://github.com/TechWorksHub/ManySecured-D3DB"
repository = "https://github.com/TechWorksHub/ManySecured-D3DB.git"

[tool.poetry.dependencies]
python = ">=3.7"
PyYAML = "^6.0"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
